@@ -3,6 +3,10 @@
 	* src/pic14/pcodepeep.c, src/pic16/pcodepeep.c:
 	  fixed name clash with mingw_w64: _DLL renamed to DLList
 	* src/SDCCutil.c: added MINGW64 build environment detection
+	* debugger/mcs51/simi.c, debugger/mcs51/cmd.c, debugger/mcs51/sdcdb.c,
+	  debugger/mcs51/break.c:
+	  fixed name clash with mingw_w64 objidl.h: undefine DATADIR
+	* debugger/mcs51/sdcdb.c(escapeQuotes): expand buffer if necessary
 
 2011-08-22 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
 
